chore(security): 412 refactored due to irs changes